added services and custom controllers

--- a/RugbyManager.API/RugbyManager.API.csproj
+++ b/RugbyManager.API/RugbyManager.API.csproj
@@ -7,7 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.14">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.12" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RugbyManager.Domain\RugbyManager.Domain.csproj" />
+    <ProjectReference Include="..\RugbyManager.Persistence\RugbyManager.Persistence.csproj" />
+    <ProjectReference Include="..\RugbyManager.Services\RugbyManager.Services.csproj" />
+    <ProjectReference Include="..\RugbyManager.Shared\RugbyManager.Shared.csproj" />
   </ItemGroup>
 
 </Project>
