--- a/RugbyManager.Tests/RugbyManager.Tests.csproj
+++ b/RugbyManager.Tests/RugbyManager.Tests.csproj
@@ -2,8 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
+    <PackageReference Include="coverlet.collector" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RugbyManager.API\RugbyManager.API.csproj" />
+    <ProjectReference Include="..\RugbyManager.Services\RugbyManager.Services.csproj" />
+  </ItemGroup>
 
 </Project>
