--- a/RugbyManager.Tests/RugbyManager.Tests.csproj
+++ b/RugbyManager.Tests/RugbyManager.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
